--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
-  "main": "server.js",
+  "main": "api/server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
