--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "@supabase/storage-js": "^2.80.0",
     "@supabase/supabase-js": "^2.38.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
